# ZenLib

./: .appveyor.yml  .gitignore  .lgtm.yml  .travis.yml  History.txt  License.NoModifications.html  License.txt  README.md  ReadMe.txt
.github/workflows/: ZenLib_Checks.yml
Contrib/: ReadMe.qmake  ZenLib.pro
Project/BCB/: CleanUp.bat  ZenLib.groupproj  ZenLib_Proj.groupproj
Project/CMake/: CMakeLists.txt  libzen.pc.in
Project/CMake/Modules/: EnableLatestCXX.cmake
Project/CodeBlocks/: CleanUp.bat
Project/Coverity/: coverity.bat
Project/GNU/: PKGBUILD  libzen.dsc  libzen.spec
Project/MSVC/: ZenLib_MSVC.sln
Project/MSVC2005/: ZenLib_MSVC.sln
Project/MSVC2008/: CleanUp.bat  ZenLib_MSVC.sln
Project/MSVC2010/: CleanUp.bat  ZenLib_MSVC.sln
Project/MSVC2012/: ZenLib_MSVC.sln
Project/MSVC2013/: ZenLib_MSVC.sln
Project/MSVC2019/: ZenLib_MSVC.sln  ZenLib_UWP.sln
Project/MSVC2022/: ZenLib_MSVC.sln  ZenLib_UWP.sln
Project/MSVC2026/: ZenLib_MSVC.slnx  ZenLib_UWP.slnx
Project/OBS/: deb6.control  deb6.dsc  deb9.dsc
Project/Qt/: ZenLib.pro
Project/Solaris/: mkpkg
Project/iOS/: build.sh
Release/: CleanUp.bat  Release_GNU_FromSource.sh  Release_GNU_Prepare.bat  Release_Source.bat  UpdateZenLib.sh
Source/Doc/: Doxyfile
Source/Example/: ZenLib_Test.cpp
Source/ZenLib/: BitStream.h  BitStream_Fast.h  BitStream_LE.h  Conf.cpp  Conf.h  Conf_Internal.h  ConvertUTF.c  ConvertUTF.h  CriticalSection.cpp  Dir.cpp  (+35 more)
debian/: changelog  control  copyright  libzen-dev.dirs  libzen-dev.install  libzen0-dev.dirs  libzen0-dev.install  libzen0.symbols  rules  watch
(+38 files in other folders)
